name:           communication
version:        1.2.0
license:        BSD3
author:         Galois, Inc.
maintainer:     Galois, Inc.
category:       HaLVM, System
stability:      experimental
build-type:     Configure
cabal-version:  >= 1.2

library
  build-depends:        HALVMCore == 1.1.0, base == 4.*, cereal >= 0.3.5.0,
                        bytestring == 0.10.*, containers == 0.5.*, syb == 0.4.*,
                        XenDevice == 1.1.0
  exposed-modules:      Communication.IVC
  other-modules:        Data.HeadTail
                        Data.PText
                        Data.ByteString.PText
                        Data.Generics.MoreAliases
                        Text.ReadP
  ghc-options:          -O2 -Wall
  c-sources:		cbits/spinlocks.c
  cpp-options:		-Icbits/
