name:           DomainBuilder
version:        1.0.0
license:        BSD3
author:         Paul Graunke <pgraunke@galois.com>, Iavor S. Diatchki <diatchki@galois.com>
maintainer:     Adam Wick <awick@galois.com>
description:    This library provides a domain-building service to the
                HaLVM. Using this library, after making sure that you are
                running in a context in which the HaLVM has permission to
                perform all the necessary operations, gives HaLVM domains
                the ability to build other domains. We've tested this 
                building not only HaLVM domains, but also Linux and
                MiniOS domains.
synopsis:       Domain-building library for the HaLVM.
category:       HaLVM, System
stability:      experimental
build-type:     Configure
cabal-version:  >= 1.2
tested-with:    GHC ==6.8.0

library
  build-depends:    base >=3, HALVMCore >=1.0, haskell98 >=1.0,
                    bytestring >=0.9, array, containers
  Extensions:       CPP
  GHC-Options:      -O2 -Wall -fno-ignore-asserts
  Exposed-Modules:  DomainBuilder.SafePage1,
                    DomainBuilder.SafePage,
                    DomainBuilder.IfaceTypes,
                    DomainBuilder.ModuleInfo,
                    DomainBuilder.Build
  Other-Modules:    DomainBuilder.LoadElf,
                    DomainBuilder.StartPage,
                    DomainBuilder.PageMap
                    DomainBuilder.PMapEntry
                    DomainBuilder.AllocM
                    DomainBuilder.CreateVM,
                    DomainBuilder.Utils,
                    DomainBuilder.Registers,
                    Elf.Do,
                    Elf.Elf,
                    Elf.HOL,
                    Elf.IntDef,
                    Elf.IntDiv,
                    Elf.List,
                    Elf.Product_Type,
                    Elf.Sum_Type

