*** ghc-pristine/libraries/base3-compat/base.cabal	2010-06-09 11:10:19.000000000 -0700
--- xen-ghc/libraries/base3-compat/base.cabal	2010-07-02 11:24:55.704583772 -0700
***************
*** 20,26 ****
  Library {
      build-depends: base       >= 4.0 && < 4.3,
                     syb        >= 0.1 && < 0.2
!     extensions: PackageImports,CPP
      ghc-options: -fno-warn-deprecations
  
      if impl(ghc < 6.9) {
--- 20,26 ----
  Library {
      build-depends: base       >= 4.0 && < 4.3,
                     syb        >= 0.1 && < 0.2
!     extensions: PackageImports,CPP,NoImplicitPrelude
      ghc-options: -fno-warn-deprecations
  
      if impl(ghc < 6.9) {
***************
*** 40,48 ****
              GHC.Arr,
              GHC.Base,
              GHC.Conc,
-             GHC.ConsoleHandler,
              GHC.Desugar,
-             GHC.Dotnet,
              GHC.Enum,
              GHC.Environment,
              GHC.Err,
--- 40,46 ----
***************
*** 50,57 ****
              GHC.Exts,
              GHC.Float,
              GHC.ForeignPtr,
-             GHC.Handle,
-             GHC.IO,
              GHC.IOBase,
              GHC.Int,
              GHC.List,
--- 48,53 ----
***************
*** 71,76 ****
--- 67,79 ----
              GHC.Weak,
              GHC.Word,
              System.Timeout
+         if !os(xen) {
+             exposed-modules:
+                 GHC.ConsoleHandler,
+                 GHC.Dotnet,
+                 GHC.Handle,
+                 GHC.IO
+         }
      }
      exposed-modules:
          Control.Applicative,
***************
*** 147,160 ****
          System.Mem,
          System.Mem.StableName,
          System.Mem.Weak,
-         System.Posix.Internals,
          System.Posix.Types,
          Text.ParserCombinators.ReadP,
          Text.ParserCombinators.ReadPrec,
-         Text.Printf,
          Text.Read,
          Text.Read.Lex,
          Text.Show,
          Text.Show.Functions
          Unsafe.Coerce
  }
--- 150,166 ----
          System.Mem,
          System.Mem.StableName,
          System.Mem.Weak,
          System.Posix.Types,
          Text.ParserCombinators.ReadP,
          Text.ParserCombinators.ReadPrec,
          Text.Read,
          Text.Read.Lex,
          Text.Show,
          Text.Show.Functions
          Unsafe.Coerce
+     if !os(xen) {
+         exposed-modules:
+             System.Posix.Internals,
+             Text.Printf
+     }
  }
