*** ghc-pristine/libraries/ghc-prim/ghc-prim.cabal	2010-06-09 11:10:21.000000000 -0700
--- xen-ghc/libraries/ghc-prim/ghc-prim.cabal	2010-07-14 16:27:41.842037151 -0700
***************
*** 8,14 ****
  description:
      GHC primitives.
  cabal-version:  >=1.6
! build-type: Custom
  
  source-repository head
      type:     darcs
--- 8,14 ----
  description:
      GHC primitives.
  cabal-version:  >=1.6
! build-type: Simple
  
  source-repository head
      type:     darcs
