*** ghc-pristine/libraries/haskell98/haskell98.cabal	2009-09-21 09:08:32.000000000 -0700
--- xen-ghc/libraries/haskell98/haskell98.cabal	2010-07-15 17:35:56.562681524 -0700
***************
*** 17,27 ****
  
  Library
      build-depends:	base >= 3 && < 5,
!                     directory, random, old-time, old-locale, process, array
      exposed-modules:
          -- Haskell 98 (Prelude and Numeric are in the base package)
!         Array, CPUTime, Char, Complex, Directory, IO, Ix, List, Locale,
!         Maybe, Monad, Random, Ratio, System, Time,
          -- FFI addendum (Foreign is in the base package)
          Bits, CError, CForeign, CString, CTypes, ForeignPtr, Int,
          MarshalAlloc, MarshalArray, MarshalError, MarshalUtils, Ptr,
--- 17,27 ----
  
  Library
      build-depends:	base >= 3 && < 5,
!                     random, old-time, old-locale, array
      exposed-modules:
          -- Haskell 98 (Prelude and Numeric are in the base package)
!         Array, CPUTime, Char, Complex, Ix, List, Locale,
!         Maybe, Monad, Random, Ratio, Time,
          -- FFI addendum (Foreign is in the base package)
          Bits, CError, CForeign, CString, CTypes, ForeignPtr, Int,
          MarshalAlloc, MarshalArray, MarshalError, MarshalUtils, Ptr,
