*** ghc-pristine/libraries/time/time.cabal	2009-07-17 08:56:29.000000000 -0700
--- xen-ghc/libraries/time/time.cabal	2010-07-15 17:23:56.189591709 -0700
***************
*** 9,15 ****
  synopsis:       A time library
  description:    A time library
  category:       System
! build-type:  Custom
  cabal-version:   >=1.6
  x-follows-version-policy:
  
--- 9,15 ----
  synopsis:       A time library
  description:    A time library
  category:       System
! build-type:     Configure
  cabal-version:   >=1.6
  x-follows-version-policy:
  
