name:           HALVMCore
version:        2.0.0
license:        BSD3
author:         Adam Wick <awick@galois.com>
maintainer:     Adam Wick <awick@galois.com>
description:    Basic libraries for using Xen functionality from the HaLVM.
                This module is pretty much required for all HaLVM programs,
                and includes the necessary basic types, data structures, and
                functions for dealing with Xen. It also provides a basic 
                IVC services and debugging console.
synopsis:       Basic library for accessing Xen from the HaLVM.
category:       HaLVM, System
stability:      experimental
build-type:     Configure
cabal-version:  >= 1.4
tested-with:    GHC ==7.7.0

library
  build-depends:    base >= 4.7 && < 5.0,
                    bytestring >= 0.10.3 && < 0.11,
                    binary >= 0.7.0.0 && < 1.0,
                    containers >= 0.5.0.0 && < 0.9
  exposed-modules:
                    Communication.IVC,
                    Communication.Rendezvous,
                    Hypervisor.Console,
                    Hypervisor.Control,
                    Hypervisor.Debug,
                    Hypervisor.DomainInfo,
                    Hypervisor.ErrorCodes,
                    Hypervisor.IOPorts,
                    Hypervisor.Memory,
                    Hypervisor.OtherDomain,
                    Hypervisor.Platform,
                    Hypervisor.Port,
                    Hypervisor.Shutdown
                    Hypervisor.Structures.CPUMap,
                    Hypervisor.Structures.DomainInfo,
                    Hypervisor.Structures.PhysicalInfo,
                    Hypervisor.Structures.VCPUContext,
                    Hypervisor.Virqs,
                    Hypervisor.XenStore
  other-modules:
                    Hypervisor.Hypercalls,
                    Hypervisor.Hypercalls.DomainControl,
                    Hypervisor.Hypercalls.PhysicalDevice,
                    Hypervisor.Hypercalls.SystemControl
  extensions:
                    BangPatterns,
                    CPP,
                    DeriveDataTypeable,
                    DeriveGeneric,
                    FlexibleInstances,
                    ForeignFunctionInterface,
                    FunctionalDependencies,
                    GeneralizedNewtypeDeriving,
                    MultiParamTypeClasses,
                    MultiWayIf
                    ScopedTypeVariables
  ghc-options:      -Wall -fno-warn-orphans
  cc-options:       -nostdinc
  include-dirs:     cbits/include
  c-sources:        cbits/domain_info.c cbits/io.c
--                     Util.WaitSet,
--                     Hypervisor.EventWaitSet,
--                     Hypervisor.BufferChan,
--  extensions:       CPP, MultiParamTypeClasses, FunctionalDependencies,
--                    FlexibleInstances, GeneralizedNewtypeDeriving,
--                    Rank2Types, FlexibleContexts, UndecidableInstances,
--                    OverlappingInstances, ForeignFunctionInterface,
--                    DeriveDataTypeable, RecordWildCards
--  hs-source-dirs:   .
--  include-dirs:     cbits/include
--  c-sources:        cbits/io.c,
--                    cbits/start_info.c,
--                    cbits/privileged.c
