name:               HaLVMInterfaces
version:            1.0.0
license:            BSD3
author:             Adam Wick <awick@galois.com>
maintainer:         Adam Wick <awick@galois.com>
description:        This package defines the interfaces that HaLVM-compatible
                    programs should use, and that the low-level drivers that
                    underly HaLVM ports should implement.
synopsis:           HaLVM device and subsystem interface definitions.
category:           HaLVM, System
stability:          experimental
build-type:         Simple
cabal-version:      >= 1.2
tested-with:        GHC ==7.10.0

library
  ghc-options:      -Wall
  build-depends:
                    base       >= 4.8.2  && < 4.10,
                    bytestring >= 0.10.6 && < 0.11
  exposed-modules:
                    HaLVM.Interface.Console,
                    HaLVM.Interface.Disk,
                    HaLVM.Interface.NIC
  extensions:
