name:           XenDevice
version:        2.1.0
license:        BSD3
author:         Adam Wick <awick@galois.com>
maintainer:     Adam Wick <awick@galois.com>
description:    This package provides access to the Xen paravirtualized 
                devices; virtual disks, virtual network cards, the virtual
                console, and the Xenbus\/Xenstore. In the future, it will also
                work with virtualized TPMs. For those interested in creating
                their own devices, the XenDevice library exports a module
                for implementing drivers over the standard Xen ring buffer
                protocol, as well.
synopsis:       Integration with Xen-virtualized devices.
category:       HaLVM, System
stability:      experimental
build-type:     Configure
cabal-version:  >= 1.2
tested-with:    GHC ==7.8.0

library
  build-depends:
                    base >= 4.7 && < 5.0,
                    bytestring >= 0.10.3 && < 0.11,
                    HALVMCore >= 2.0.0 && < 3.0.0,
                    containers >= 0.5.0.0 && < 0.9,
                    array
  exposed-modules:
                    Communication.RingBuffer,
                    XenDevice.Disk,
                    XenDevice.NIC
--                    XenDevice.PCI
  extensions:
                    BangPatterns,
                    CPP,
                    ForeignFunctionInterface,
                    ScopedTypeVariables
  ghc-options:      -O2 -Wall
