name:           XenRaw
version:        1.0.0
license:        BSD3
author:         Adam Wick <awick@galois.com>
maintainer:     Adam Wick <awick@galois.com>
description:    This package provides access to raw Xen capabilities. 
synopsis:       Integration with basic Xen capabilities
category:       HaLVM, System
stability:      experimental
build-type:     Simple
cabal-version:  >= 1.2
tested-with:    GHC ==7.10.0

library
  build-depends:
                    base       >= 4.8.2 && < 5.0,
                    bytestring >= 0.10.6 && < 0.11,
                    containers >= 0.5.6.2 && < 0.9,
                    array      >= 0.5.1.0 && < 0.7
  exposed-modules:
  extensions:
