dnl BANNERSTART
dnl - Copyright 2006-2015, Galois, Inc.
dnl - This software is distributed under a standard, three-clause BSD license.
dnl - Please see the file LICENSE, distributed with this software, for specific
dnl - terms and conditions.
dnl Author: Adam Wick <awick@galois.com>
dnl BANNEREND
AC_PREREQ(2.60)
AC_INIT(HALVM,3.0.0,awick@galois.com,halvm)

AC_CONFIG_FILES([XenRaw.buildinfo])
AC_OUTPUT
