Name: TransferTest
Version: 1.0.0
Synopsis: Examples of performing Xen grant transfers.
Description:
  This example shows how two domains can transfer blocks of information
  through the Xen "grant transfer" (page flipping) mechanism.
License: BSD3
Author: Adam Wick <awick@galois.com>
Maintainer: Adam Wick <awick@galois.com>
Copyright: 2008 Galois, Inc.
Stability: Experimental
Category: Examples
Build-type: Simple
Cabal-Version: >= 1.4

Executable Sender
  Main-Is: Sender.hs
  Ghc-Options:   -Wall
  build-depends: base >= 3, HALVMCore >= 1, XenDevice >= 1, RendezvousLib >= 1, communication
  extensions: ScopedTypeVariables

Executable Receiver
  Main-Is: Receiver.hs
  Ghc-Options:   -Wall
  build-depends: base >= 3, HALVMCore >= 1, XenDevice >= 1, RendezvousLib >= 1, communication
  extensions: ScopedTypeVariables

